--- a/primeiro-exemplo/src/main/resources/application.properties
+++ b/primeiro-exemplo/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 server.port=8083
 
 #Caminho do banco de dados
-spring.datasource.url=jdbc:postgresql://localhost:5432/mercadinho
+spring.datasource.url=${DATABASE_URL}
 
 #Nome do usuario de conexao com o banco
-spring.datasource.username=postgres
+spring.datasource.username=${DATABASE_USERNAME}
 
 #Senha de conexao com o banco
-spring.datasource.password=12345678
+spring.datasource.password=${DATABASE_PASSWORD}
 
 #Nome do driver
 spring.datasource.driver-class-name=org.postgresql.Driver
