Mudando caminho do banco de dados]

--- a/primeiro-exemplo/src/main/resources/application.properties
+++ b/primeiro-exemplo/src/main/resources/application.properties
@@ -1,17 +1,12 @@
-#Porta do servidor
+# Porta do servidor
 server.port=8083
 
-#Caminho do banco de dados
+# Configurações do banco via variáveis de ambiente
 spring.datasource.url=${DATABASE_URL}
-
-#Nome do usuario de conexao com o banco
 spring.datasource.username=${DATABASE_USERNAME}
-
-#Senha de conexao com o banco
 spring.datasource.password=${DATABASE_PASSWORD}
-
-#Nome do driver
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#Configuracao para indicar o hibernate para gerar atualizacoes automaticas constantemente no schema
+# Hibernate
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
